WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189051
[IntersectionObserver] Fix build after
r235424
https://bugs.webkit.org/show_bug.cgi?id=189051
Summary
[IntersectionObserver] Fix build after r235424
Ali Juma
Reported
2018-08-28 10:49:14 PDT
Fix unused variable warning in FrameView.cpp: ./page/FrameView.cpp:2006:15: error: unused variable 'document' [-Werror,-Wunused-variable]
Attachments
Patch
(1.23 KB, patch)
2018-08-28 10:50 PDT
,
Ali Juma
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ali Juma
Comment 1
2018-08-28 10:50:45 PDT
Created
attachment 348310
[details]
Patch
Ali Juma
Comment 2
2018-08-28 10:53:23 PDT
Comment on
attachment 348310
[details]
Patch Clearing flags on attachment: 348310 Committed
r235428
: <
https://trac.webkit.org/changeset/235428
>
Ali Juma
Comment 3
2018-08-28 10:53:25 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-08-28 10:54:21 PDT
<
rdar://problem/43804471
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug