[IntersectionObserver] Fix build after r235424 https://bugs.webkit.org/show_bug.cgi?id=189051

Rubber-stamped by Simon Fraser.

Fix unused variable warning by using the variable.

* page/FrameView.cpp:
(WebCore::FrameView::viewportContentsChanged):

Canonical link: https://commits.webkit.org/204082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235428 268f45cc-cd09-0410-ab3c-d52691b4dbfc